add /set-up-payouts and new field in user table
